# flint

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: generate_umbrella_header.cmake  update_submodules.cmake
lib/: CMakeLists.txt
lib/include/flint/: flint.hpp  pch.hpp
lib/include/flint/__config/: config.hpp  export.hpp
lib/include/flint/__module/: library.hpp
lib/src/shared/: library.cpp
